--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <section id="home" class="hero">
     <div class="inner container">
-      <h1>قادة يصنعون الفارق</h1>
-      <p class="tagline">شريكك إلى مستقبل أعمال أفضل – من الأفكار إلى الإنجازات</p>
+      <h1>مركز الأعمال الدولي</h1>
+      <p class="tagline">شريكك إلى مستقبل أعمال أفضل من الأفكار إلى الإنجازات بإذن الله </p>
       <div class="hero-actions">
         <a href="#solutions" class="btn btn-ghost">استكشف حلولنا</a>
       </div>
