--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <div class="card">
         <h3>وسائل التواصل</h3>
-        <p>البريد: info@example.com<br/>الهاتف: 000-000-0000</p>
+        <p>البريد: ibcenter.6@gmail.com<br/>الهاتف: 00201000683007</p>
       </div>
     </div>
   </section>
