--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="brand">
         <div class="brand-text">
           <strong>مركز الأعمال الدولي</strong>
-          <small>International Business Center</small>
+          <small>International Business Hub</small>
         </div>
       </div>
       <nav class="nav">
